feat(ide): add distributed agent team controls